fix: fix max height on mobiles

--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,8 @@ body::-webkit-scrollbar {
     grid-template: minmax(max-content, 92%) minmax(100px, 8%) / 1fr;
     min-width: 100%;
     min-height: 100%;
+    max-height: 100%;
+    max-height: 100svh;
     height: fit-content;
     overflow: hidden;
     overflow-y: auto;
